--- a/_posts/2020-03-03-first.markdown
+++ b/_posts/2020-03-03-first.markdown
@@ -2,7 +2,7 @@
 layout: post
 title: Jekyllでブログ作ってみた
 date: 2020-03-03 20:20
-tags: Jekyll
+categories: Jekyll
 ---
 
 ずっとブログ系のサイトを作ってみたかったので嬉しいです！1日かかってしまいました。。
