--- a/_posts/2020-06-23-diary.md
+++ b/_posts/2020-06-23-diary.md
@@ -21,6 +21,18 @@ $ bundle exec jekyll serve
 いろいろを忘れててむちゃくちゃ時間がかかってしまった。
 `git clone`を恥ずかしながら今回知ったので、覚えておきたいと思う。（このブログを作った時は始めにテーマを決めてそれをダウンロードしてからそこに直接セットアップをおこなった。）
 
+### コミット間違えた！！とき
+
+{% highlight shell %}
+$ git reflog
+$ git reset --hard [コミット番号（git reflogすると履歴がいっぱい出てくるのでそこから選ぶ）]
+{% endhighlight %}
+
+なんと、`git reflog`であらゆるコミット履歴を見れると同時に、`git reset -hard [番号]`で戻りたいコミットまで戻ることができる！！！
+間違ってフォルダ内を全消ししてしまい落胆し、必死にググった結果たどり着くことができた。
+
+これがGitの便利さなのか！！！と今更ながら知った。これは便利。全人類知るべきコマンド。忘れないようにしたい。
+
 ## 今回使ってみたテーマ
 
 [Beautiful Jekyll（リポジトリのリンク）](https://github.com/daattali/beautiful-jekyll#readme)を使った。すごくシンプルだし、アニメーションが綺麗でめっちゃいい。リンクのホバーの色も好きだし、なんかロマンあふれてる（手作り感が非常に少ない）。これからいっぱい書くぞ！
