--- a/_posts/2020-06-23-diary.md
+++ b/_posts/2020-06-23-diary.md
@@ -2,7 +2,7 @@
 layout: post
 title: 英語で日記をつけることにした話とJekyllの使い方まとめ
 date: 2020-06-23 8:50
-categories: jekyll
+categories: Jekyll
 ---
 昨日、いつもの[Momiyama](https://twitter.com/momeemt)さんが英語でブログを書き始めたらしいので、早速~~パクリ~~インスパイアを受け、私もJekyllの復習がてら新たにサイトを立ち上げてみることにした。これは学校行く直前に爆速でまとめ上げた記事。多分課題は昨日やったはずなので終わってると信じてる。
 
