--- a/_posts/2024-04-19-achilles.md
+++ b/_posts/2024-04-19-achilles.md
@@ -5,7 +5,9 @@ date: 2024-04-19 14:00
 categories: university
 ---
 
-大学の哲学の授業で一瞬触れられた「アキレスと亀」パラドックス（激遅亀と爆速アキレスが競走する。亀はハンデとしてアキレスより先の地点からスタート。アキレスが亀のいる地点に到着した時には亀は先に進んでおり、さらにアキレスが亀の進んだ先に到着した時には亀はさらに先に進んでいる。このことが繰り返されるため、アキレスはいつまで経っても亀には追い付けない。）について授業の質問フォーラムで質問があったため、投稿してみた。
+大学の哲学の授業で一瞬触れられた「アキレスと亀」パラドックス。
+
+これ（激遅亀と爆速アキレスが競走する。亀はハンデとしてアキレスより先の地点からスタート。アキレスが亀のいる地点に到着した時には亀は先に進んでおり、さらにアキレスが亀の進んだ先に到着した時には亀はさらに先に進んでいる。このことが繰り返されるため、アキレスはいつまで経っても亀には追い付けない。）について授業の質問フォーラムで質問があったため、投稿してみた。
 
 あらかじめ書いたmarkdownがmoodleのフォーラムで読み込まれず書き直す羽目になった上、改行しまくりの文章になったまま制限時間（いる？）が終わり、ちょっと嫌だった。。改行嫌いなのに大好きみたいじゃん。。言い回しも、わかりやすさとウザさの狭間で悩んだ。ほんとの数学の人が読んだら怒られそうな気が。。無限の概念って本当に難しいです。
 
